--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,2 @@
 RewriteEngine On
-RewriteRule ^(getinfo|getlinks)\/(.*)/?$ index.php?type=$1&url=$2 [QSA]
+RewriteRule ^([a-zA-Z0-9])\/([0-9]+)\/(.*)/?$ helloworld.php?stamp=$1&id=$2&name=$3 [QSA]
