--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 RewriteRule ^([a-zA-Z0-9]+)\/([0-9]+)\/(.*)/?$ index.php?stamp=$1&id=$2&name=$3 [QSA]
-<FilesMatch dl.madeline>
-    Order Allow,Deny
-    Deny from All
+<FilesMatch "\.(log|phar|madeline|lock|temp)$">
+ Order Allow,Deny
+ Deny from all
 </FilesMatch>
