--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,5 @@ ErrorDocument 404 /404.php
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([a-zA-Z]+\_[a-zA-Z]+)/?$ index.php?getTheFile=$1 [QSA]
+RewriteRule ^(.*)/?$ index.php?getTheFile=$1 [QSA]
 RewriteRule ^download\/([a-zA-Z]+\_[a-zA-Z]+)/?(.*)?$ download/index.php?hash=$1&name=$2 [QSA]
