--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-ErrorDocument 404 404.php
+ErrorDocument 404 /404.php
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
